<resources>
    <string name="app_name">SIT Cinemax</string>
    <string name="w_e_l_c_o_m_e">W E L C O M E</string>
    <string name="s_i_t">S I T</string>
    <string name="cinemax">Cinemax</string>
    <string name="developed_by_nirmal_kumar">Developed By Nirmal Kumar</string>
    <string name="allowedName">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz ,.()-_</string>
    <string name="hint_otp">######</string>
    <string name="noOtp">Didn\'t receive OTP?</string>
    <string name="update_user">Update your details</string>

    <string name="required"><font color='#FF0000'>*</font> Required</string>
    <string name="editName">Name<font color='#FF0000'>*</font></string>
    <string name="editLocation">Location<font color='#FF0000'>*</font></string>
    <string name="editAge">Age<font color='#FF0000'>*</font></string>
    <string name="editGender">Choose Gender<font color='#FF0000'>*</font></string>
    <string name="editEmail">Email</string>
    <string name="editAddress">Address</string>

    <string name="hint_age">20</string>
    <string name="hint_email">example@gmail.com</string>

    <string name="update">Update</string>

    <string name="sign_up_with">Sign Up With</string>

    <string name="get_otp">Get otp</string>

    <string name="to_do_list">To-do List</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="re_send">Re-send</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_with">Login With</string>

    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="book_tickets">Book Tickets</string>
    <string name="tickets_history">Tickets History</string>
    <string name="scanned_shop">Scanned Shop</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="feedback">Feedback</string>
    <string name="book_movie">Book Movie</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select_date">Select Date</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="add_new">Add New</string>
    <string name="stay_home">Stay Home</string>
    <string name="delete">Delete</string>
    <string name="about_movie">About Movie</string>
    <string name="book_ticket_s">Book Ticket\'s</string>
    <string name="update_your_details">Update Your Details</string>
    <string name="e_g_john">e.g. John</string>
    <string name="_20bcta16">20BCTA16</string>
    <string name="select_your_course">Select Your Course</string>
    <string name="choose_year">Choose Year  :</string>
    <string name="_1styear">1stYear</string>
    <string name="_2ndyear">2ndYear</string>
    <string name="_3rdyear">3rdYear</string>
    <string name="_4thyear">4thYear</string>
    <string name="team_sit_cinemax">Team SIT Cinemax</string>
    <string name="contact_us">Contact Us</string>
    <string name="book_ticket">Book Ticket</string>
    <string name="movie_name1">Movie Name</string>
    <string name="name">Name</string>
    <string name="sic">SIC</string>
    <string name="phone">Phone</string>
    <string name="choose_no_of_person_s">Choose No of Person\'s</string>
    <string name="_1">1</string>
    <string name="_2nd_person_name">2nd Person Name</string>
    <string name="_2nd_person_sic">2nd Person SIC</string>
    <string name="_2nd_person_phone">2nd Person Phone</string>
    <string name="proceed">Proceed</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="team_s_i_t_cinemax">Team S I T Cinemax</string>
    <string name="guidelines_for_sit_cinemax">Guidelines For SIT Cinemax</string>
    <string name="i_agree">I, Agree</string>
    <string name="before_sitting_in_the_alloted_seat_check_wether_its_condition_is_good_or_not"><font color="#09EAA3">*</font>Before Sitting In the Alloted Seat Check Wether Its Condition Is Good Or Not</string>
    <string name="maintain_deocorum_inside_the_cinemax"><font color="#44ADFF">*</font>Maintain Deocorum Inside The Cinemax</string>
    <string name="sit_accoridng_to_your_alloted_seat"><font color="#F74343">*</font>Sit Accoridng To Your Alloted Seat</string>
    <string name="arrive_exactly_at_the_reporting_time"><font color="#09EAA3">*</font>Arrive Exactly At the Reporting Time</string>
    <string name="you_must_come_with_your_id_card_face_mask_and_santizer"><font color="#44ADFF">*</font>You Must Come With Your ID Card, Face Mask and Santizer</string>
    <string name="don_t_carry_bag_umbrella_food_items_water_bottle_etc_into_the_cinemax"><font color="#F74343">*</font>Don\'t Carry bag, Umbrella, Food Items, Water Bottle etc. Into The Cinemax</string>
    <string name="my_qr">My QR</string>
    <string name="about_movie1">About Movie</string>
    <string name="movie_name">Movie Name</string>
    <string name="details">Details:</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="screenig_date">Screenig Date:</string>
    <string name="emoji">EMOJI</string>
    <string name="rate_the_experience">Rate The Experience</string>
    <string name="good_enough">Good Enough</string>
    <string name="enter_your_feedback">Enter your feedback</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="return_to_dashboard">Return to Dashboard</string>
    <string name="you_can_find_your_tickets_at_ticket_s_history">You Can Find Your Tickets At Ticket\'s History</string>
    <string name="booking_successful">Booking Successful!!</string>
    <string name="_201299381324">201299381324</string>
    <string name="spider_man_no_way_home">Spider Man No Way Home</string>
    <string name="_2h_15m_hindi_u_a">2h 15m Hindi U/A</string>
    <string name="_23rd_december_2021">23rd Decemeber 2021</string>
    <string name="time">Time</string>
    <string name="_2h_15m">2h 15m</string>
    <string name="seat_no">Seat No</string>
    <string name="date">Date</string>
    <string name="c04_c15">C04, C15</string>
    <string name="tickets">Tickets</string>
    <string name="_2">2</string>
    <string name="name1">Name:</string>
    <string name="k_nirmal_kumar_20bcta16">K Nirmal Kumar(20BCTA16)</string>
    <string name="name2">Name:</string>
    <string name="seats">Seat No:</string>
    <string name="b01_b03">B01, B03</string>
    <string name="your_qr_code">Your Qr Code</string>
    <string name="tap_for_screenshot">Tap For Screenshot</string>
    <string name="booked_tickets">Booked Tickets</string>
    <string name="ticket_s">Ticket\'s</string>
    <string name="wearing_slippers_are_not_allowed_inside_the_cinemax"><font color="#44ADFF">*</font>Wearing Slippers Are not Allowed inside The Cinemax</string>
</resources>