<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#CAECFD"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="18dp"
    tools:targetApi="o">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:background="@color/Primary"
        android:src="@drawable/img_shop"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:autoSizeTextType="uniform"
        android:gravity="center_horizontal"
        android:text="@string/guidelines_for_sit_cinemax"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/my_fav_sans_number"
        android:text="@string/you_must_come_with_your_id_card_face_mask_and_santizer"
        android:textColor="@color/black"
        android:textSize="20dp"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/my_fav_sans_number"
        android:gravity="clip_horizontal"
        android:text="@string/don_t_carry_bag_umbrella_food_items_water_bottle_etc_into_the_cinemax"
        android:textColor="@color/black"
        android:textSize="20dp"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/my_fav_sans_number"
        android:text="@string/arrive_exactly_at_the_reporting_time"
        android:textColor="@color/black"
        android:textSize="20dp"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/my_fav_sans_number"
        android:text="@string/sit_accoridng_to_your_alloted_seat"
        android:textColor="@color/black"
        android:textSize="20dp"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/my_fav_sans_number"
        android:text="@string/maintain_deocorum_inside_the_cinemax"
        android:textColor="@color/black"
        android:textSize="20dp"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/my_fav_sans_number"
        android:text="@string/before_sitting_in_the_alloted_seat_check_wether_its_condition_is_good_or_not"
        android:textColor="@color/black"
        android:textSize="20dp"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/my_fav_sans_number"
        android:text="@string/wearing_slippers_are_not_allowed_inside_the_cinemax"
        android:textColor="@color/black"
        android:textSize="20dp"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_cancel"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/light_red"
            android:fontFamily="@font/my_fav_sans_number"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:textStyle="bold"
            tools:ignore="SpUsage" />


        <Button
            android:id="@+id/bt_ok"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/light_green"
            android:fontFamily="@font/my_fav_sans_number"
            android:text="@string/i_agree"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:textStyle="bold"
            tools:ignore="SpUsage" />


    </LinearLayout>

</LinearLayout>