<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AboutSITCinemax">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        tools:ignore="SpUsage"
        tools:targetApi="o" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autoSizeTextType="uniform"
        android:text="@string/version_1_0"
        android:textColor="@color/white"
        android:textSize="15dp"
        tools:ignore="SpUsage"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/source_code"
        android:layout_width="218dp"
        android:layout_height="218dp"
        android:layout_marginTop="15dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@null"
        android:focusable="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/harmony"
        android:text="@string/team_s_i_t_cinemax"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold"
        tools:ignore="SpUsage"
        tools:targetApi="o" />

</LinearLayout>