<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/emoji"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/emoji"
            android:src="@drawable/one" />

        <TextView
            android:id="@+id/rating_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/adobegothicstdbold"
            android:gravity="center_horizontal"
            android:text="@string/rate_the_experience"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18dp"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/rating_result"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/adobegothicstdbold"
            android:gravity="center_horizontal"
            android:text="@string/good_enough"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="28dp"
            tools:ignore="SpUsage" />

        <RatingBar
            android:id="@+id/rateStars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="79dp"
            android:layout_marginEnd="79dp"
            android:backgroundTint="#FB8C00"
            android:numStars="5"
            android:progressBackgroundTint="#FFFFFF"
            android:progressTint="#FB8C00"
            android:rating="1"
            android:stepSize="1"
            android:theme="@style/Widget.AppCompat.RatingBar" />

        <EditText
            android:id="@+id/feedback_et"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:autofillHints="Enter Your Feedback"
            android:background="@drawable/bg_card_shop"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/enter_your_feedback"
            android:inputType="textMultiLine"
            android:lines="4"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintBlack" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Submit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/Primary"
            android:fontFamily="@font/astronaut"
            android:gravity="center"
            android:text="@string/submit_feedback"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:cornerRadius="5dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            tools:ignore="SpUsage" />
    </LinearLayout>

</ScrollView>
